Semana 6 Actividad Completa con datos del alumno

--- a/Semana_6_Data_Analysis_with_Python_(IBM).ipynb
+++ b/Semana_6_Data_Analysis_with_Python_(IBM).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNLn51oXeW4Mso7bwHYmwWQ",
+      "authorship_tag": "ABX9TyPLsP88V1211G2X96VDEXcI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,16 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/PosgradoMNA/actividades-de-aprendizaje-RobertoRomeroVielma-A00822314/blob/main/Semana_6_Data_Analysis_with_Python_(IBM).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Nombre: Roberto Romero Vielma\n",
+        "- Matrícula: A00822314"
+      ],
+      "metadata": {
+        "id": "qmZNtxSFXtjE"
+      }
     },
     {
       "cell_type": "markdown",
